--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -31,8 +31,7 @@
     "@types/inquirer": "9.0.3",
     "@vercel/ncc": "0.34.0",
     "chalk": "2.4.2",
-    "execa": "^7.0.0",
-    "open": "^8.4.2"
+    "execa": "^7.0.0"
   },
   "engines": {
     "node": ">=14.6.0"
