--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad-core",
-  "version": "0.0.41",
+  "version": "0.0.42-alpha.0",
   "description": "Build MUI apps quickly",
   "author": "MUI Toolpad team",
   "homepage": "https://github.com/mui/mui-toolpad#readme",
@@ -100,5 +100,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "adf30860fa6951acae8f7e96e9009f595c3d9021"
+  "gitHead": "ed9e42178b49c20885774064b0e023b8360d7777"
 }
