--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,8 @@ previewsExpireAfterDays: 3
 services:
   - type: web
     name: toolpad
+    branch: legacy-master
+    pullRequestPreviewsEnabled: true
     env: node
     buildCommand: yarn --frozen-lockfile --prod=false && yarn release:build
     startCommand: yarn start
