--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -64,6 +64,7 @@
     "@tanstack/react-query": "^4.24.10",
     "@tanstack/react-query-devtools": "^4.24.10",
     "@types/cors": "^2.8.13",
+    "@types/react-dev-utils": "^9.0.11",
     "abort-controller": "^3.0.0",
     "arg": "^5.0.2",
     "args": "^5.0.3",
@@ -109,6 +110,7 @@
     "prisma": "^4.10.1",
     "quickjs-emscripten": "^0.22.0",
     "react": "^18.2.0",
+    "react-dev-utils": "^12.0.1",
     "react-devtools-inline": "^4.27.2",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
