Try out tsup as build tool

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "dotenv-cli": "^7.0.0",
     "inquirer": "^9.1.4",
     "semver": "^7.3.8",
+    "tsup": "^6.6.3",
     "yargs": "^17.7.1"
   },
   "engines": {
