--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -11,7 +11,7 @@
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
     "prisma": "prisma",
-    "build:cli": "tsc -p tsconfig.cli.json",
+    "build:cli": "tsup",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
     "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --format=iife --outdir=./public/reactDevtools",
     "build:typings": "ts-node --esm ./scripts/typings.mts",
@@ -20,7 +20,7 @@
     "dev:react-devtools": "yarn build:react-devtools --watch",
     "dev:typings": "yarn build:typings",
     "dev:prisma": "prisma generate --watch",
-    "dev13:cli": "yarn build:cli --watch --preserveWatchOutput",
+    "dev13:cli": "tsup --watch",
     "dev13:react-devtools": "yarn build:react-devtools --watch",
     "dev13:typings": "yarn build:typings",
     "waitForDb": "ts-node --esm ./scripts/waitForDb.mts",
