--- a/packages/toolpad-app/tsconfig.cli.json
+++ b/packages/toolpad-app/tsconfig.cli.json
@@ -5,7 +5,8 @@
     "rootDir": ".",
     "outDir": "./dist",
     "module": "commonjs",
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "target": "ESNext"
   },
   "include": ["./cli/**/*"]
 }
