--- a/packages/toolpad-components/tsconfig.json
+++ b/packages/toolpad-components/tsconfig.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "paths": {
       // TODO: remove when typescript module resolution supports package exports. (v5.0 with moduleResolution: 'bundler')
-      "@mui/toolpad-core": ["../toolpad-core/dist/esm"],
-      "@mui/toolpad-core/path": ["../toolpad-core/dist/esm/path"],
-      "@mui/toolpad-core/objectKey": ["../toolpad-core/dist/esm/objectKey"]
+      "@mui/toolpad-core": ["../toolpad-core/dist"],
+      "@mui/toolpad-core/path": ["../toolpad-core/dist/path"],
+      "@mui/toolpad-core/objectKey": ["../toolpad-core/dist/objectKey"],
+      "@mui/toolpad-core/types": ["../toolpad-core/dist/types"]
     },
     "module": "esnext",
     "alwaysStrict": true,
@@ -15,5 +16,5 @@
     "target": "ES2020",
     "skipLibCheck": true
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
