--- a/packages/toolpad/tsconfig.json
+++ b/packages/toolpad/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "esnext",
     "alwaysStrict": true,
     "rootDir": "src",
-    "outDir": "dist/esm",
+    "outDir": "dist",
     "declaration": true,
     "target": "ES2020",
     "skipLibCheck": true
