--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "release:build": "lerna run --ignore docs --stream build",
     "release:version": "lerna version --no-changelog --no-push --no-git-tag-version",
     "release:docker": "dotenv -- node ./scripts/releaseDocker.mjs",
+    "release:publish": "lerna publish --force-publish --no-git-tag-version --no-push --no-git-reset",
+    "release:publish-canary": "lerna publish --force-publish --no-git-tag-version --no-push --no-git-reset --pre-dist-tag canary",
     "release:changelog": "dotenv -- node ./scripts/releaseChangelog.mjs --repo mui-toolpad",
     "test:build": "lerna run build --scope @mui/toolpad-core --scope @mui/toolpad-components --stream",
     "test:integration": "playwright test --config ./test/integration/playwright.config.ts",
