--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "create-toolpad-app-test",
-  "version": "0.0.16",
+  "name": "create-toolpad-app",
+  "version": "0.0.1",
   "keywords": [
     "react",
     "toolpad",
     "mui"
   ],
   "description": "Create Toolpad apps with one command",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mui/mui-toolpad",
+    "directory": "packages/create-toolpad-app"
+  },
   "author": "Toolpad Team",
   "license": "MIT",
   "bin": {
