Fix: Match version with the rest of the packages

--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-toolpad-app",
-  "version": "0.0.1",
+  "version": "0.0.42-alpha.5",
   "keywords": [
     "react",
     "toolpad",
