--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -29,8 +29,10 @@
     "node": ">=14.6.0"
   },
   "dependencies": {
-    "@types/inquirer": "^9.0.3",
     "chalk": "^5.2.0",
     "execa": "^7.1.1"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^9.0.3"
   }
 }
