--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@mui/toolpad-app",
-  "version": "0.0.41",
+  "version": "0.0.42-alpha.6",
   "license": "MIT",
   "scripts": {
     "build": "yarn prisma generate && concurrently \"yarn:build:*\" && rimraf ./.next/cache",
     "start": "yarn waitForDb && yarn prisma migrate deploy && next start",
     "dev": "yarn prisma generate && yarn waitForDb && yarn prisma db push --skip-generate && concurrently \"yarn:dev:*\"",
     "dev13": "concurrently \"yarn:dev13:*\"",
-    "local:start": "TOOLPAD_LOCAL_MODE=1 next start",
-    "local:dev": "TOOLPAD_LOCAL_MODE=1 concurrently \"yarn:dev:*\"",
+    "cli": "./cli.js",
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
     "prisma": "prisma",
+    "build:cli": "tsc -p tsconfig.cli.json",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
     "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --format=iife --outdir=./public/reactDevtools",
     "build:typings": "ts-node --esm ./scripts/typings.mts",
@@ -20,6 +20,7 @@
     "dev:react-devtools": "yarn build:react-devtools --watch",
     "dev:typings": "yarn build:typings",
     "dev:prisma": "prisma generate --watch",
+    "dev13:cli": "yarn build:cli --watch --preserveWatchOutput",
     "dev13:react-devtools": "yarn build:react-devtools --watch",
     "dev13:typings": "yarn build:typings",
     "waitForDb": "ts-node --esm ./scripts/waitForDb.mts",
@@ -32,6 +33,8 @@
     "prisma",
     "public",
     "scripts",
+    "dist",
+    "cli.js",
     ".next"
   ],
   "dependencies": {
@@ -47,8 +50,8 @@
     "@mui/lab": "^5.0.0-alpha.123",
     "@mui/material": "^5.11.13",
     "@mui/system": "^5.11.13",
-    "@mui/toolpad-components": "^0.0.41",
-    "@mui/toolpad-core": "^0.0.41",
+    "@mui/toolpad-components": "^0.0.42-alpha.6",
+    "@mui/toolpad-core": "^0.0.42-alpha.6",
     "@mui/types": "^7.2.3",
     "@mui/utils": "^5.11.13",
     "@mui/x-data-grid-generator": "^5.17.25",
@@ -57,14 +60,16 @@
     "@mui/x-date-pickers-pro": "^5.0.20",
     "@next/bundle-analyzer": "^13.2.4",
     "@prisma/client": "^4.11.0",
-    "@sentry/nextjs": "^7.43.0",
     "@swc/wasm": "^1.3.41",
     "@tanstack/react-query": "^4.27.0",
     "@tanstack/react-query-devtools": "^4.27.0",
     "@types/cors": "^2.8.13",
+    "@types/react-dev-utils": "^9.0.11",
     "abort-controller": "^3.0.0",
     "arg": "^5.0.2",
+    "args": "^5.0.3",
     "basic-auth": "^2.0.1",
+    "chokidar": "^3.5.3",
     "clsx": "^1.2.1",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
@@ -72,11 +77,14 @@
     "csstype": "^3.1.1",
     "cuid": "^3.0.0",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "esbuild": "0.17.12",
+    "execa": "^7.0.0",
     "fastestsmallesttextencoderdecoder": "^1.0.22",
     "find-up": "^6.3.0",
     "formdata-polyfill": "^4.0.10",
     "fractional-indexing": "^3.2.0",
+    "get-port": "^6.1.2",
     "headers-polyfill": "^3.1.2",
     "history": "^5.3.0",
     "invariant": "^2.2.4",
@@ -91,6 +99,7 @@
     "next": "^13.2.4",
     "node-fetch": "^2.6.9",
     "node-fetch-har": "^1.0.1",
+    "open-editor": "^4.0.0",
     "path-to-regexp": "^6.2.1",
     "perf-cascade": "^3.0.3",
     "pg": "^8.10.0",
@@ -101,6 +110,7 @@
     "prisma": "^4.11.0",
     "quickjs-emscripten": "^0.22.0",
     "react": "^18.2.0",
+    "react-dev-utils": "^12.0.1",
     "react-devtools-inline": "^4.27.2",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
@@ -151,5 +161,6 @@
   "typings": "./index.d.ts",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "035964a9ef748b365e130b428c2cbba9663902cf"
 }
