--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad-core",
-  "version": "0.0.41",
+  "version": "0.0.42-alpha.6",
   "description": "Build MUI apps quickly",
   "author": "MUI Toolpad team",
   "homepage": "https://github.com/mui/mui-toolpad#readme",
@@ -51,6 +51,11 @@
       "import": "./dist/esm/objectKey.js",
       "require": "./dist/cjs/objectKey.js"
     },
+    "./server": {
+      "types": "./dist/esm/server.d.ts",
+      "import": "./dist/esm/server.js",
+      "require": "./dist/cjs/server.js"
+    },
     "./utils/*": {
       "types": "./dist/esm/utils/*.d.ts",
       "import": "./dist/esm/utils/*.js",
@@ -87,13 +92,13 @@
     "react-error-boundary": "^3.1.4"
   },
   "devDependencies": {
-    "concurrently": "^7.6.0",
-    "react": "^18.2.0"
+    "concurrently": "^7.6.0"
   },
   "peerDependencies": {
     "react": "^18.0.0"
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "035964a9ef748b365e130b428c2cbba9663902cf"
 }
