--- a/packages/toolpad/tsconfig.json
+++ b/packages/toolpad/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      // TODO: remove when typescript module resolution supports package exports. (v5.0 with moduleResolution: 'bundler')
+      "@mui/toolpad-core/createQuery": ["../toolpad-core/dist/esm/createQuery"],
+      "@mui/toolpad-core/createComponent": ["../toolpad-core/dist/esm/createComponent"]
+    },
     "module": "esnext",
     "alwaysStrict": true,
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "dist/esm",
     "declaration": true,
     "target": "ES2020",
     "skipLibCheck": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "src/index.mts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
