--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-toolpad-app",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0",
   "keywords": [
     "react",
     "toolpad",
