--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "cjsify": "mkdir -p ./dist/cjs && echo \"{ \\\"type\\\":\\\"commonjs\\\" }\" > ./dist/cjs/package.json",
@@ -33,8 +33,8 @@
     "toolpad": "./index.js"
   },
   "dependencies": {
-    "@mui/toolpad-app": "^0.1.0-alpha.1",
-    "@mui/toolpad-core": "^0.1.0-alpha.1",
+    "@mui/toolpad-app": "^0.1.0",
+    "@mui/toolpad-core": "^0.1.0",
     "arg": "^5.0.2",
     "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
