--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-toolpad-app",
-  "version": "0.0.42-alpha.5",
+  "version": "0.1.0",
   "keywords": [
     "react",
     "toolpad",
@@ -30,9 +30,11 @@
   },
   "dependencies": {
     "chalk": "^5.2.0",
-    "execa": "^7.1.1"
+    "execa": "^7.1.1",
+    "inquirer": "^9.1.5"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.3"
-  }
+  },
+  "gitHead": "de68953329881ccd3aa40e82a7302c0baa38c3c5"
 }
