--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "version": "0.0.42-alpha.6",
+  "version": "0.1.0",
   "private": true,
   "author": "MUI Toolpad",
   "license": "MIT",
