--- a/packages/eslint-plugin-material-ui/package.json
+++ b/packages/eslint-plugin-material-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-material-ui",
-  "version": "0.0.42-alpha.6",
+  "version": "0.1.0",
   "private": true,
   "description": "Custom eslint rules for MUI.",
   "main": "src/index.js",
