--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad-core",
-  "version": "0.0.42-alpha.6",
+  "version": "0.1.0",
   "description": "Build MUI apps quickly",
   "author": "MUI Toolpad team",
   "homepage": "https://github.com/mui/mui-toolpad#readme",
@@ -100,5 +100,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "035964a9ef748b365e130b428c2cbba9663902cf"
+  "gitHead": "de68953329881ccd3aa40e82a7302c0baa38c3c5"
 }
