--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ packages/toolpad-app/public/reactDevtools
 packages/toolpad-app/public/runtime
 packages/toolpad-app/public/typings.json
 packages/toolpad-app/prisma/generated
+
+examples/*/yarn.lock
