--- a/examples/bundleSize/package.json
+++ b/examples/bundleSize/package.json
@@ -10,8 +10,8 @@
     "start": "toolpad start"
   },
   "dependencies": {
-    "@mui/toolpad": "^0.0.41-alpha.1",
-    "@mui/toolpad-core": "^0.0.41-alpha.1",
+    "@mui/toolpad": "latest",
+    "@mui/toolpad-core": "latest",
     "axios": "^1.3.3"
   },
   "engines": {
