Rename dev13 script to dev

--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "yarn prisma generate && concurrently \"yarn:build:*\" && rimraf ./.next/cache",
     "start": "yarn waitForDb && yarn prisma migrate deploy && next start",
-    "dev": "yarn prisma generate && yarn waitForDb && yarn prisma db push --skip-generate && concurrently \"yarn:dev:*\"",
-    "dev13": "concurrently \"yarn:dev13:*\"",
+    "dev": "concurrently \"yarn:dev:*\"",
     "cli": "./cli.js",
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
@@ -16,13 +15,9 @@
     "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --format=iife --outdir=./public/reactDevtools",
     "build:typings": "ts-node --esm ./scripts/typings.mts",
     "build:function-runtime": "rimraf ./src/toolpadDataSources/function/dist && esbuild ./src/toolpadDataSources/function/runtime/index.ts --target=es2020 --bundle --outdir=./src/toolpadDataSources/function/dist",
-    "dev:next": "next dev | pino-pretty",
+    "dev:cli": "yarn build:cli --watch --preserveWatchOutput",
     "dev:react-devtools": "yarn build:react-devtools --watch",
     "dev:typings": "yarn build:typings",
-    "dev:prisma": "prisma generate --watch",
-    "dev13:cli": "yarn build:cli --watch --preserveWatchOutput",
-    "dev13:react-devtools": "yarn build:react-devtools --watch",
-    "dev13:typings": "yarn build:typings",
     "waitForDb": "ts-node --esm ./scripts/waitForDb.mts",
     "dev:function-runtime": "yarn build:function-runtime --watch",
     "waitForApp": "ts-node --esm ./scripts/waitForApp.mts",
