--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -9,8 +9,7 @@
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "dev": "concurrently \"yarn:dev:*\" yarn:cjsify",
     "dev:esm": "yarn build:esm --pretty --watch --preserveWatchOutput",
-    "dev:cjs": "yarn build:cjs --pretty --watch --preserveWatchOutput",
-    "dev13": "yarn dev"
+    "dev:cjs": "yarn build:cjs --pretty --watch --preserveWatchOutput"
   },
   "exports": {
     "./package.json": "./package.json",
