Correct moduleresolution in project

--- a/packages/toolpad-core/tsconfig.json
+++ b/packages/toolpad-core/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "module": "esnext",
+    "moduleResolution": "nodenext",
     "alwaysStrict": true,
     "rootDir": "src",
     "outDir": "dist",
