--- a/packages/toolpad-app/cli/projectFiles/.gitignore
+++ b/packages/toolpad-app/cli/projectFiles/.gitignore
@@ -1,29 +1,2 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-node_modules
-/.pnp
-.pnp.js
-
-# yarn
-.yarn/*
-!.yarn/cache
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-# env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# generated files
-.toolpad-generated
-
-# misc
-.DS_Store
-*.pem
+*
+!.gitignore
