--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,10 +174,7 @@ jobs:
           environment:
             - LOCAL_MODE_TESTS: '1'
             - HTTPBIN_BASEURL: 'http://localhost/'
-          command: |
-            docker-compose -f ./docker-compose.test.yml up -d --quiet-pull
-            yarn test:integration
-            docker-compose -f ./docker-compose.test.yml down
+          command: yarn test:integration
 
 workflows:
   version: 2
