--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,7 +138,6 @@ jobs:
           command: yarn check-types
   test_static:
     <<: *defaults
-    resource_class: medium+
     steps:
       - checkout
       - install_js
@@ -148,7 +147,7 @@ jobs:
 
   test_unit:
     <<: *defaults
-    resource_class: 'medium+'
+    resource_class: 'large'
     docker:
       - image: mcr.microsoft.com/playwright:v1.31.1-focal
         environment:
