--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "source.fixAll.eslint": true
   },
   "editor.formatOnSave": true,
+  "typescript.tsdk": "node_modules/typescript/lib"
   "cSpell.words": ["Toolpad"]
 }
