--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -3,29 +3,23 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "build": "yarn prisma generate && concurrently \"yarn:build:*\" && rimraf ./.next/cache",
-    "start": "yarn waitForDb && yarn prisma migrate deploy && next start",
+    "build": "concurrently \"yarn:build:*\" && rimraf ./.next/cache",
+    "start": "next start",
     "dev": "concurrently \"yarn:dev:*\"",
     "cli": "./cli.js",
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
-    "prisma": "prisma",
     "build:cli": "tsc -p tsconfig.cli.json",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
     "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --format=iife --outdir=./public/reactDevtools",
     "build:typings": "ts-node --esm ./scripts/typings.mts",
-    "build:function-runtime": "rimraf ./src/toolpadDataSources/function/dist && esbuild ./src/toolpadDataSources/function/runtime/index.ts --target=es2020 --bundle --outdir=./src/toolpadDataSources/function/dist",
     "dev:cli": "yarn build:cli --watch --preserveWatchOutput",
     "dev:react-devtools": "yarn build:react-devtools --watch",
     "dev:typings": "yarn build:typings",
-    "waitForDb": "ts-node --esm ./scripts/waitForDb.mts",
-    "dev:function-runtime": "yarn build:function-runtime --watch",
     "waitForApp": "ts-node --esm ./scripts/waitForApp.mts",
-    "prisma-detect-drift": "prisma migrate diff --exit-code --from-migrations ./prisma/migrations --to-schema-datamodel ./prisma/schema.prisma --shadow-database-url \"$TOOLPAD_SHADOW_DATABASE_URL\"",
     "check-types": "tsc --noEmit"
   },
   "files": [
-    "prisma",
     "public",
     "scripts",
     "dist",
@@ -54,7 +48,6 @@
     "@mui/x-date-pickers": "^6.0.2",
     "@mui/x-date-pickers-pro": "^6.0.2",
     "@next/bundle-analyzer": "^13.2.4",
-    "@prisma/client": "^4.11.0",
     "@swc/wasm": "^1.3.41",
     "@tanstack/react-query": "^4.27.0",
     "@tanstack/react-query-devtools": "^4.27.0",
@@ -83,7 +76,6 @@
     "headers-polyfill": "^3.1.2",
     "history": "^5.3.0",
     "invariant": "^2.2.4",
-    "isolated-vm": "^4.5.0",
     "json-to-ts": "^1.7.0",
     "json5": "^2.2.3",
     "lodash-es": "^4.17.21",
@@ -101,7 +93,6 @@
     "pino-elasticsearch": "^6.3.0",
     "prettier": "^2.8.4",
     "pretty-bytes": "^6.1.0",
-    "prisma": "^4.11.0",
     "quickjs-emscripten": "^0.22.0",
     "react": "^18.2.0",
     "react-dev-utils": "^12.0.1",
