--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "tsc -p ./tsconfig.json -outDir ./dist/",
-    "dev": "tsc -w -p ./tsconfig.json --outDir ./dist/"
+    "dev": "tsc -w --preserveWatchOutput -p ./tsconfig.json --outDir ./dist/"
   },
   "engines": {
     "node": ">=14.6.0"
