--- a/packages/toolpad/tsconfig.json
+++ b/packages/toolpad/tsconfig.json
@@ -12,7 +12,9 @@
     "outDir": "dist/esm",
     "declaration": true,
     "target": "ES2020",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "pretty": true,
+    "preserveWatchOutput": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
