--- a/packages/create-toolpad-app/tsconfig.json
+++ b/packages/create-toolpad-app/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "noEmit": false,
+    "rootDir": "src",
     "outDir": "./dist",
     "pretty": true,
     "preserveWatchOutput": true
