--- a/packages/create-toolpad-app/tsconfig.json
+++ b/packages/create-toolpad-app/tsconfig.json
@@ -9,7 +9,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "noEmit": false,
-    "outDir": "./dist"
+    "rootDir": "src",
+    "outDir": "./dist",
+    "pretty": true,
+    "preserveWatchOutput": true
   },
-  "exclude": ["templates", "dist"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
