--- a/packages/toolpad-core/browser/package.json
+++ b/packages/toolpad-core/browser/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "../dist/cjs/browser.js",
-  "types": "../dist/cjs/browser.d.ts",
+  "main": "../dist/browser.cjs",
+  "types": "../dist/browser.d.ts",
   "type": "commonjs"
 }
