--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsup",
-    "dev": "tsup --watch"
+    "dev": "tsup --watch",
+    "check-types": "tsc"
   },
   "exports": {
     "./package.json": "./package.json",
