--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "tsc -p ./tsconfig.json",
+    "build2": "tsup",
     "dev": "tsc -p ./tsconfig.json --watch"
   },
   "engines": {
