--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -104,6 +104,7 @@
     "ts-node": "^10.9.1",
     "whatwg-url": "^12.0.1",
     "yaml": "^2.2.1",
+    "yaml-diff-patch": "^2.0.0",
     "zod": "^3.21.4",
     "zod-validation-error": "^1.1.0"
   },
